fixed invisible contrast

--- a/css/sass-styles.css
+++ b/css/sass-styles.css
@@ -60,4 +60,9 @@ img {
   max-width: 100px;
 }
 
+.visually-hidden {
+  background-color: #fff;
+  color: #000;
+}
+
 /* [start] /components/_base.scss */
