--- a/scss/components/_base.scss
+++ b/scss/components/_base.scss
@@ -14,4 +14,8 @@ img {
   }
 }
 
+.visually-hidden{
+  background-color: #fff;
+  color: #000;
+}
 /* [start] /components/_base.scss */
